<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.FoodDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/details_image"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="40dp"
            android:contentDescription="@string/cd_itemImage"
            android:src="@drawable/hamburger"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/details_close"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/details_close"
            android:src="@drawable/navigation_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="20dp"
            android:background="@color/normal_green"
            app:layout_constraintTop_toBottomOf="@+id/details_image" />

        <TextView
            android:id="@+id/details_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="center"
            android:text="@string/placeholder_titlelong"
            android:textColor="@color/black"
            android:textSize="@dimen/details_textsize_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_title">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/details_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="15dp"
                    android:fontFamily="@font/quicksand_medium"
                    android:text="@string/placeholder_lorem_long"
                    android:textSize="@dimen/details_textsize_subtitle"
                    tools:ignore="VisualLintLongText" />
            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/details_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginEnd="150dp"
            android:layout_marginBottom="72dp"
            android:fontFamily="@font/font"
            android:gravity="center"
            android:text="@string/placeholder_card_foods_food_price"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/details_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font"
            android:gravity="center"
            android:text="@string/placeholder_card_foods_food_quantity"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/details_add"
            app:layout_constraintEnd_toStartOf="@+id/details_add"
            app:layout_constraintStart_toEndOf="@+id/details_remove"
            app:layout_constraintTop_toTopOf="@+id/details_add" />

        <ImageButton
            android:id="@+id/details_remove"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="130dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/cd_remove"
            android:scaleX="1.7"
            android:scaleY="1.7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/navigation_remove"
            app:tint="@color/normal_green"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

        <ImageButton
            android:id="@+id/details_add"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="130dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/btn_entercode"
            android:scaleX="1.7"
            android:scaleY="1.7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/navigation_add"
            app:tint="@color/normal_green"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>