<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterActivity">

    <ImageView
        android:id="@+id/img_enter_circleBackground"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/circle_background_onboard"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:translationY="-280dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/green_circle"
        tools:ignore="VisualLintBounds" />

    <ImageView
        android:id="@+id/img_enter_logo"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:contentDescription="@string/cd_logoFoodfast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/foodfast512v1"
        tools:ignore="VisualLintBounds" />

    <Button
        android:id="@+id/btn_qrcode"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_green"
        android:drawableStart="@drawable/ic_qrcode"
        android:drawablePadding="10dp"
        android:fontFamily="@font/font"
        android:gravity="center|center_vertical"
        android:padding="10dp"
        android:text="@string/btn_qrcode"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textFontWeight="800"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_enter_logo"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_entercode"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_green"
        android:drawableStart="@drawable/ic_key"
        android:drawablePadding="10dp"
        android:fontFamily="@font/font"
        android:gravity="center|center_vertical"
        android:padding="10dp"
        android:text="@string/btn_entercode"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textFontWeight="800"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_qrcode"
        app:layout_constraintStart_toStartOf="@+id/btn_qrcode"
        app:layout_constraintTop_toBottomOf="@+id/btn_qrcode"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txt_enter_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/font"
        android:text="@string/welcome"
        android:textFontWeight="800"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_enter_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>