<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    tools:ignore="TextSizeCheck"
    android:animateLayoutChanges="true">

    <ImageView
        android:id="@+id/cart_food_image"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:contentDescription="@string/cd_itemImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hamburger" />

    <View
        android:id="@+id/cart_food_separator"
        android:layout_width="5dp"
        android:layout_height="110dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/normal_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cart_food_image"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cart_food_separator"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/cart_food_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/font"
            android:singleLine="true"
            android:text="@string/placeholder_titlelong"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textFontWeight="800"
            android:textSize="@dimen/cart_food_textsize_title" />

        <TextView
            android:id="@+id/cart_food_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/font"
            android:text="@string/rv_cart_food_quantity"
            android:textSize="@dimen/cart_food_textsize_quantity" />

        <TextView
            android:id="@+id/cart_food_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/font"
            android:text="@string/rv_cart_food_price"
            android:textSize="@dimen/cart_food_textsize_price" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>