<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:clipToPadding="false"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_circleBackground"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/circle_background_onboard"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:translationY="-150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/green_circle"
        tools:ignore="VisualLintBounds" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="550dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_onBoarding_next"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/button_green"
        android:text="@string/txt_next"
        android:textFontWeight="800"
        android:fontFamily="@font/font"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/indicator_layout"
        android:layout_width="0dp"
        android:layout_height="78dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="5dp"
        android:gravity="center|center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btn_onBoarding_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPager" />

</androidx.constraintlayout.widget.ConstraintLayout>